--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: AdvancedStreams
 version: ${project.version}
 main: com.melowetty.advancedstreams.AdvancedStreams
 authors: [ Melowetty ]
+softdepend: [ PlaceholderAPI ]
