--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ version: ${project.version}
 main: com.melowetty.advancedstreams.AdvancedStreams
 authors: [ Melowetty ]
 softdepend: [ PlaceholderAPI ]
+commands:
+  stream:
